# VideoArchive

./: .gitignore  README.md  inspect_index.py  prepare_triplet_data.py  pyproject.toml  requirements.txt  train_triplet.py
backend/: index_mapping.json  main.py  models.py  search_engine.py  video_processor.py
frontend/: index.html  script.js  style.css
