[project]
name = "VideoArchive"
version = "0.1.0"
requires-python = ">=3.11, <3.12"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "python-multipart",
    "transformers",
    "Pillow",
    "opencv-python-headless",
    "numpy",
    "tqdm",
    "scenedetect>=0.6.7",
    "faiss-cpu>=1.8.0.post1",
]
